--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -44,8 +44,8 @@ enableCodeCopy = true
   invertPagination = false
   showReadingTime = true
   showTableOfContents = true
-  showTaxonomies = false
-  showWordCount = false
+  showTaxonomies = true
+  showWordCount = true
   showComments = false
   # sharingLinks = ["facebook", "twitter", "mastodon", "pinterest", "reddit", "linkedin", "email"]
 
@@ -53,8 +53,8 @@ enableCodeCopy = true
   showBreadcrumbs = false
   showSummary = false
   showTableOfContents = false
-  showTaxonomies = false
-  groupByYear = true
+  showTaxonomies = true
+  groupByYear = false
   paginationWidth = 1
 
 [sitemap]
